# beat-this-rs

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
docs/task/001-research/: plan.md  research-runtimes.md
docs/task/002-project-scaffold/: plan.md  summary.md
docs/task/003-audio-loading/: plan.md
docs/task/007-public-api/: plan.md
docs/task/010-model-management/: summary.md
docs/task/011-improve-integration-tests/: plan.md
docs/task/012-performance-coreml/: research.md
docs/task/013-runtimes/: next-steps.md  performance.md
docs/tasks/001-research/: research.md
docs/tasks/004-mel-spectrogram/: plan.md
docs/tasks/005-inference/: plan.md
docs/tasks/006-post-processing/: plan.md
docs/tasks/008-generate-output/: plan.md
docs/tasks/009-cli/: plan.md
docs/tasks/011-improve-integration-tests/: summary.md
docs/tasks/012-performance-coreml/: research.md
docs/tasks/013-runtimes/: performance.md  plan-rten.md  plan.md  task.md
docs/tasks/014-batch-json-int8q/: batch-mode-plan.md  int8q-comparison.json  int8q-results.md  next-steps.md
docs/tasks/014-next-steps/: int8q-plan.md  progress.md
docs/tasks/015-default-runtime/: plan.md  research.md  task.md
docs/tasks/016-docker-image/: plan.md  research.md
docs/tasks/017-prepare-first-release/: plan-model-distribution.md  plan.md  research.md  task.md
docs/tasks/018-arguments-cleanup/: args-plan.md  args-research.md  progress.md
docs/tasks/019-batch-mode-rework/: plan.md  research.md
docs/tasks/020-expose-mel-analysis/: plan.md  research.md  summary.md
docs/tasks/021-lib-api-cleanup/: plan.md  research-naming.md  research-public-api.md  summary.md
docs/tasks/022-audio-chunk-padding-fix/: research.md  summary.md
scripts/: ckpt2onnx.py  compare_models.py  download-models.sh  gen_golden.py  integration-test.py  quantize_int8.py
src/: audio.rs  inference.rs  lib.rs  main.rs  mel.rs  output.rs  postprocessing.rs  runtime.rs
src/runtime/: ort.rs  rten.rs
tests/: audio_integration.rs  cross_runtime.rs  inference_integration.rs  mel_integration.rs  ort_integration.rs  output_integration.rs  postprocessing_integration.rs  public_api_integration.rs  python_parity.rs  rten_integration.rs
tests/common/: mod.rs
tests/fixtures/: README.md  golden_full.json  golden_small.json
