[package]
name = "beat-this"
version = "0.3.0"
edition = "2021"
description = "Rust port of Beat This! — AI-powered beat and downbeat tracking"
license = "MIT"
repository = "https://github.com/danigb/beat-this-rs"
readme = "README.md"
keywords = ["beat-tracking", "music", "audio", "mir", "onnx"]
categories = ["multimedia::audio", "science"]
exclude = [
    "docs/",
    "scripts/",
    "test_files/",
    "models/",
    ".github/",
    ".DS_Store",
    "Dockerfile",
    ".dockerignore",
]

[[bin]]
name = "beat-this"
path = "src/main.rs"

[lib]
name = "beat_this"
path = "src/lib.rs"

[dependencies]
ort = { version = "=2.0.0-rc.11", features = [
    "ndarray",
    "load-dynamic",
    "coreml",
] }
ndarray = "0.17"
rten = { version = "0.24", features = ["fft"] }
rten-tensor = { version = "0.24" }
anyhow = "1"
symphonia = { version = "0.5", features = ["all"] }
rubato = "0.14"
hound = "3.5"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true

# Optimize dependencies (notably the pure-Rust `rten` inference backend) even in
# dev/test builds. `cargo test` is unoptimized, which makes rten's float math
# orders of magnitude slower — without this, the rten integration tests take ~30
# min in CI. This keeps our own crate at debug opt-level (fast incremental builds,
# debug assertions) while compiling deps with full optimization.
[profile.dev.package."*"]
opt-level = 3
